v1.8.0 — Presentation fidelity